@@ -72,6 +72,24 @@ libgnomeinclude_HEADERS = \
 	libgnometypebuiltins.h	\
 	$(libgnome_headers)
 
+#
+# The GConf schema data installation voodoo
+#
+schemadir = $(sysconfdir)/gconf/schemas
+schema_DATA = \
+	libgnome.schema
+
+libgnome-install-schema-data: $(schema_DATA)
+	for n in $+ ; do \
+		if test -e $$n ; then \
+			gconftool --install-schema-file=$$n ; \
+		else \
+			gconftool --install-schema-file=$(srcdir)/$$n ; \
+		fi ; \
+	done
+install-data-local: libgnome-install-schema-data
+
+
 # all autogenerated files need to be generated in the srcdir,
 # so old versions get remade and are not confused with newer
 # versions in the build dir. thus a development setup requires
@@ -141,7 +159,8 @@ EXTRA_DIST = \
 	libgnome-2.0.pc.in		\
 	gnome-marshal.list		\
 	gnome-marshal.c			\
-	parse-path.cP
+	parse-path.cP			\
+	$(schema_DATA)
 
 BUILT_SOURCES = \
 	libgnometypebuiltins.h		\
