@@ -1,0 +1,142 @@
+<?xml version="1.0"?>
+<gconfschemafile>
+  <schemalist>
+    <schema>
+      <applyto>/desktop/gnome/applications/terminal</applyto>
+      <key>/schemas/desktop/gnome/applications/terminal</key>
+      <owner>gnome</owner>
+      <type>string</type>
+      <locale name="C">
+        <short>Terminal application</short>
+        <long>Terminal program to use when starting applications that require one</long>
+      </locale>
+    </schema>
+    <schema>
+      <applyto>/desktop/gnome/url-handlers/default-show</applyto>
+      <key>/schemas/desktop/gnome/url-handlers/default-show</key>
+      <owner>gnome</owner>
+      <type>string</type>
+      <locale name="C">
+        <short>Default URL show handler</short>
+        <long>Default URL show handler</long>
+      </locale>
+    </schema>
+    <schema>
+      <applyto>/desktop/gnome/url-handlers/info-show</applyto>
+      <key>/schemas/desktop/gnome/url-handlers/info-show</key>
+      <owner>gnome</owner>
+      <type>string</type>
+      <locale name="C">
+        <short>URL handler for info pages</short>
+        <long>URL handler for info pages</long>
+      </locale>
+    </schema>
+    <schema>
+      <applyto>/desktop/gnome/url-handlers/man-show</applyto>
+      <key>/schemas/desktop/gnome/url-handlers/man-show</key>
+      <owner>gnome</owner>
+      <type>string</type>
+      <locale name="C">
+        <short>URL handler for man pages</short>
+        <long>URL handler for man pages</long>
+      </locale>
+    </schema>
+    <schema>
+      <applyto>/desktop/gnome/url-handlers/ghelp-show</applyto>
+      <key>/schemas/desktop/gnome/url-handlers/ghelp-show</key>
+      <owner>gnome</owner>
+      <type>string</type>
+      <locale name="C">
+        <short>URL handler for gnome help pages</short>
+        <long>URL handler for gnome help pages</long>
+      </locale>
+    </schema>
+    <schema>
+      <applyto>/desktop/gnome/interface/menus-have-tearoff</applyto>
+      <key>/schemas/desktop/gnome/interface/menus-have-tearoff</key>
+      <owner>gnome</owner>
+      <type>bool</type>
+      <default>true</default>
+      <locale name="C">
+        <short>Tearoff item on menus</short>
+        <long>Menus can be torn off if this setting is true.</long>
+      </locale>
+    </schema>
+    <schema>
+      <applyto>/desktop/gnome/interface/toolbar-labels</applyto>
+      <key>/schemas/desktop/gnome/interface/toolbar-labels</key>
+      <owner>gnome</owner>
+      <type>bool</type>
+      <default>true</default>
+      <locale name="C">
+        <short>Toolbars have labels</short>
+        <long>Toolbars have labels</long>
+      </locale>
+    </schema>
+    <schema>
+      <applyto>/desktop/gnome/interface/toolbar-detachable</applyto>
+      <key>/schemas/desktop/gnome/interface/toolbar-detachable</key>
+      <owner>gnome</owner>
+      <type>bool</type>
+      <default>true</default>
+      <locale name="C">
+        <short>Toolbars are detachable</short>
+        <long>Toolbars are detachable</long>
+      </locale>
+    </schema>
+    <schema>
+      <applyto>/desktop/gnome/interface/toolbar-relief</applyto>
+      <key>/schemas/desktop/gnome/interface/toolbar-relief</key>
+      <owner>gnome</owner>
+      <type>bool</type>
+      <default>true</default>
+      <locale name="C">
+        <short>Toolbars have a relief</short>
+        <long>Toolbars have a relief</long>
+      </locale>
+    </schema>
+    <schema>
+      <applyto>/desktop/gnome/interface/menubar-detachable</applyto>
+      <key>/schemas/desktop/gnome/interface/menubar-detachable</key>
+      <owner>gnome</owner>
+      <type>bool</type>
+      <default>true</default>
+      <locale name="C">
+        <short>Menubars are detachable</short>
+        <long>Menubars are detachable</long>
+      </locale>
+    </schema>
+    <schema>
+      <applyto>/desktop/gnome/interface/menubar-relief</applyto>
+      <key>/schemas/desktop/gnome/interface/menubar-relief</key>
+      <owner>gnome</owner>
+      <type>bool</type>
+      <default>true</default>
+      <locale name="C">
+        <short>Menubars have a relief</short>
+        <long>Menubars have a relief</long>
+      </locale>
+    </schema>
+    <schema>
+      <applyto>/desktop/gnome/interface/statusbar-meter-on-right</applyto>
+      <key>/schemas/desktop/gnome/interface/statusbar-meter-on-right</key>
+      <owner>gnome</owner>
+      <type>bool</type>
+      <default>true</default>
+      <locale name="C">
+        <short>Status bar meter is on the right side</short>
+        <long>Status bar meter is on the right side of the status bar</long>
+      </locale>
+    </schema>
+    <schema>
+      <applyto>/desktop/gnome/interface/statusbar-interactive</applyto>
+      <key>/schemas/desktop/gnome/interface/statusbar-interactive</key>
+      <owner>gnome</owner>
+      <type>bool</type>
+      <locale name="C">
+        <short>Status bar is interactive</short>
+        <long>Status bar is interactive</long>
+      </locale>
+    </schema>
+  </schemalist>
+</gconfschemafile>
